# modern-software-dev-assignments

./: .gitignore
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: LLM_IMPLEMENTATION.md  README.md  assignment_zh.md  writeup.md
week2/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/weather-mcp-server/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  cursor-mcp-config.json  docker-compose.yml  pyproject.toml  remote-config.json  server.py  start.sh  test_server.py  verify.sh
week4/: assignment_zh.md
week5/: CLAUDE.md  IMPROVEMENTS.md  Makefile  README.md
week5/backend/: .coverage  ENVELOPE_FORMAT_EXAMPLES.md  TASK7_COMPLETION_SUMMARY.md
week5/backend/app/: exceptions.py  main.py  models.py  schemas.py
week5/backend/docs/: TASK_7_IMPLEMENTATION.md
week5/backend/tests/: conftest.py  test_action_items.py  test_error_handling.py  test_extract.py  test_indexes.py  test_note_tags.py  test_notes.py  test_pagination.py  test_performance.py  test_tag_edge_cases.py  (+4 more)
week5/docs/: INDEX_ANALYSIS.md  TASKS_CN.md  task2-completion-summary.md
week5/frontend/: MIGRATION_SUMMARY.md
week6/: SECURITY_FIX_REPORT.md  Semgrep_Code_Findings_2026_01_13 (1).csv  semgrep_scan_results.txt
week7/: .gitignore  CLAUDE.md  TEST_GRAPHITE_WORKFLOW.md  writeup.zh.md
week7/docs/: TASKS.zh.md
(+50 files in other folders)
